More FFI flags