@@ -7,7 +7,7 @@ clojure -Srepro -T:build uber
 ## Run jar locally
 
 ```
-java -Dclojure.server.repl="{:port 5555 :accept clojure.core.server/repl}" -jar target/app.jar -m app.main -Duser.timezone=UTC -XX:+UseZGC -XX:+ZGenerational
+java -Dclojure.server.repl="{:port 5555 :accept clojure.core.server/repl}" -jar target/app.jar -m app.main -Duser.timezone=UTC -XX:+UseZGC -XX:+ZGenerational --enable-native-access=ALL-UNNAMED
 ```
 
 ## Deploy
